Actions
Bug #13538
closedlogadm: multiply-defined symbols
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:
Description
Build errors with gcc 10:
ld: fatal: symbol 'Debug' is multiply-defined: (file conf.o type=OBJT; file err.o type=OBJT); ld: fatal: symbol 'Err_env' is multiply-defined: (file conf.o type=OBJT; file err.o type=OBJT); ld: fatal: symbol 'Debug' is multiply-defined: (file conf.o type=OBJT; file fn.o type=OBJT); ld: fatal: symbol 'Err_env' is multiply-defined: (file conf.o type=OBJT; file fn.o type=OBJT); ld: fatal: symbol 'Debug' is multiply-defined: (file conf.o type=OBJT; file glob.o type=OBJT); ld: fatal: symbol 'Err_env' is multiply-defined: (file conf.o type=OBJT; file glob.o type=OBJT); ld: fatal: symbol 'Debug' is multiply-defined: (file conf.o type=OBJT; file kw.o type=OBJT); ld: fatal: symbol 'Err_env' is multiply-defined: (file conf.o type=OBJT; file kw.o type=OBJT); ld: fatal: symbol 'Debug' is multiply-defined: (file conf.o type=OBJT; file lut.o type=OBJT); ld: fatal: symbol 'Err_env' is multiply-defined: (file conf.o type=OBJT; file lut.o type=OBJT); ld: fatal: symbol 'Debug' is multiply-defined: (file conf.o type=OBJT; file main.o type=OBJT); ld: fatal: symbol 'Err_env' is multiply-defined: (file conf.o type=OBJT; file main.o type=OBJT); ld: fatal: symbol 'Debug' is multiply-defined: (file conf.o type=OBJT; file opts.o type=OBJT); ld: fatal: symbol 'Err_env' is multiply-defined: (file conf.o type=OBJT; file opts.o type=OBJT); ld: fatal: file processing errors. No output written to logadm collect2: error: ld returned 1 exit status *** Error code 1 dmake: Fatal error: Command failed for target `logadm'
Testing done: build/install/boot
Related issues
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 454c9e74c7c117274fb3612dc713f144088203bf
commit 454c9e74c7c117274fb3612dc713f144088203bf Author: Toomas Soome <tsoome@me.com> Date: 2021-03-02T18:55:17.000Z 13538 logadm: multiply-defined symbols Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Updated by Toomas Soome over 2 years ago
- Related to Bug #13595: logadm: failing to build test programs added
Actions