usr/src/cmd/logadm/main.c
@@ -82,6 +82,8 @@ static char *Chown = "/bin/chown";
 static char *Gzip = "/bin/gzip";
 static char *Mkdir = "/bin/mkdir";
 
+int Debug;
+
 /* return from time(0), gathered early on to avoid slewed timestamps */
 time_t Now;
 
